fix text align issue

--- a/styles.css
+++ b/styles.css
@@ -175,11 +175,13 @@ body {
 #sign-up {
     display: flex;
     flex-wrap: wrap;
-    width: var(--inner-width);
 }
 
 .field {
     padding: var(--form-spacing);
+    /* align fields and text */
+    padding-left: 0px;
+
     /* prevents more than 2 fields on same row */
     flex: 1 1 40%;
 
